Added Dutch translation

--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -9,6 +9,7 @@ Comment[fr]=Un outil pour mesurer la performance des disques physiques
 Comment[hu]=Lemezek teljesítményét mérő alkalmazás
 Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisiche
 Comment[ja]=ディスクドライブのベンチマークツール
+Comment[nl]=Een hulpmiddel voor het benchmarken van schijven
 Comment[pl]=Narzędzie do testowania wydajności dysków
 Comment[pt_BR]=Uma ferramenta de benchmark de discos
 Comment[ru]=Тестирование производительности накопителей
@@ -22,6 +23,7 @@ Keywords[fr]=benchmark;disque;performance;
 Keywords[hu]=benchmark;teljesítmény;mérés;lemez;meghajtó;
 Keywords[it]=benchmark;disco;prestazioni;
 Keywords[ja]=ベンチマーク;ディスク;
+Keywords[nl]=benchmark;disk;schijf;prestaties;
 Keywords[pl]=benchmark;pomiar;wydajność;dysk;napęd;
 Keywords[pt_BR]=benchmark;disco;
 Keywords[ru]=производительность;диск;накопитель;
