Added finnish translation

--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -5,6 +5,7 @@ Comment=A disk drive benchmark tool
 Comment[cs]=Nástroj pro otestování výkonnosti datového úložiště
 Comment[de]=Ein Festplatten-Benchmark-Tool
 Comment[es_MX]=Una herramienta para benchmark de unidades de disco
+Comment[fi]=Kiintolevyn suorituskyvyn mittaus ja testaus
 Comment[fr]=Un outil pour mesurer la performance des disques physiques
 Comment[hu]=Lemezek teljesítményét mérő alkalmazás
 Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisiche
