Improve translations in .desktop file

--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -1,36 +1,49 @@
 [Desktop Entry]
 Name=KDiskMark
 GenericName=KDiskMark
-Comment=A disk drive benchmark tool
-Comment[cs]=Nástroj pro otestování výkonnosti datového úložiště
-Comment[de]=Ein Festplatten-Benchmark-Tool
-Comment[es_MX]=Una herramienta para benchmark de unidades de disco
-Comment[fi]=Kiintolevyn suorituskyvyn mittaus ja testaus
-Comment[fr]=Un outil pour mesurer la performance des disques physiques
-Comment[hu]=Lemezek teljesítményét mérő alkalmazás
-Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisiche
-Comment[ja]=ディスクドライブのベンチマークツール
-Comment[nl]=Een hulpmiddel voor het benchmarken van schijven
-Comment[pl]=Narzędzie do testowania wydajności dysków
-Comment[pt_BR]=Uma ferramenta de benchmark de discos
-Comment[ru]=Тестирование производительности накопителей
-Comment[sv]=Prestandatest för hårddiskar
-Comment[tr]=Disk Sürücü performans ölçüm aracı
-Comment[zh_CN]=磁盘测速工具
-Keywords=benchmark;disk;
-Keywords[es_MX]=benchmark;disco;
-Keywords[de]=benchmark;laufwerk;disk;
-Keywords[fr]=benchmark;disque;performance;
-Keywords[hu]=benchmark;teljesítmény;mérés;lemez;meghajtó;
-Keywords[it]=benchmark;disco;prestazioni;
-Keywords[ja]=ベンチマーク;ディスク;
-Keywords[nl]=benchmark;disk;schijf;prestaties;
-Keywords[pl]=benchmark;pomiar;wydajność;dysk;napęd;
-Keywords[pt_BR]=benchmark;disco;
-Keywords[ru]=производительность;диск;накопитель;
-Keywords[sv]=prestandatest;hårddisk;
-Keywords[tr]=benchmark;disk;
-Keywords[zh_CN]=基准测试;磁盘;
+Comment=A storage device benchmark tool
+
+Comment[cs]=Nástroj pro testování úložišť
+Comment[de]=Ein Werkzeug für Speichergeräte-Tests
+Comment[es_MX]=Una herramienta de evaluación de almacenamiento
+Comment[fi]=Tallennuslaitteiden testaustyökalu
+Comment[fr]=Un outil de test des périphériques de stockage
+Comment[hi]=एक भंडारण परीक्षण उपकरण
+Comment[hu]=Egy tárolóeszköz teljesítménymérő
+Comment[it]=Uno strumento di test dispositivi di archiviazione
+Comment[ja]=ストレージデバイス性能測定ツール
+Comment[nl]=Een hulpmiddel voor opslagprestaties
+Comment[pl]=Narzędzie testowania pamięci masowej
+Comment[pt_BR]=Uma ferramenta de teste de armazenamento
+Comment[ru]=Тест производительности накопителей
+Comment[sk]=Nástroj na testovanie úložísk
+Comment[sv]=Ett prestandatest för lagringsenheter
+Comment[tr]=Bir depolama test aracı
+Comment[uk]=Тест швидкодії накопичувачів
+Comment[zh_CN]=存储设备测试工具
+Comment[zh_TW]=儲存裝置測試工具
+
+Keywords=benchmark;storage;performance;speed;test;
+Keywords[cs]=test;úložiště;výkon;rychlost;
+Keywords[de]=test;speicher;leistung;geschwindigkeit;
+Keywords[es_MX]=prueba;almacenamiento;rendimiento;velocidad;
+Keywords[fi]=testi;tallennus;suorituskyky;nopeus;
+Keywords[fr]=test;stockage;performance;vitesse;
+Keywords[hi]=परीक्षण;भंडारण;प्रदर्शन;गति;
+Keywords[hu]=teszt;tároló;teljesítmény;sebesség;
+Keywords[it]=test;archiviazione;prestazioni;velocità;
+Keywords[ja]=テスト;ストレージ;性能;速度;
+Keywords[nl]=test;opslag;prestaties;snelheid;
+Keywords[pl]=test;napęd;wydajność;szybkość;
+Keywords[pt_BR]=teste;armazenamento;desempenho;velocidade;
+Keywords[ru]=тест;накопитель;производительность;скорость;
+Keywords[sk]=test;úložisko;výkon;rýchlosť;
+Keywords[sv]=test;lagring;prestanda;hastighet;
+Keywords[tr]=test;depolama;performans;hız;
+Keywords[uk]=тест;накопичувач;швидкодія;швидкість;
+Keywords[zh_CN]=测试;存储;性能;速度;
+Keywords[zh_TW]=測試;儲存;效能;速度;
+
 Exec=kdiskmark
 Icon=kdiskmark
 Terminal=false
