Update kdiskmark.desktop with es_ES

--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -5,6 +5,7 @@ Comment=A storage device benchmark tool
 
 Comment[cs]=Nástroj pro testování úložišť
 Comment[de]=Ein Werkzeug für Speichergeräte-Tests
+Comment[es_ES]=Una herramienta de diagnóstico para dispositivos de almacenamiento
 Comment[es_MX]=Una herramienta de evaluación de almacenamiento
 Comment[fi]=Tallennuslaitteiden testaustyökalu
 Comment[fr]=Un outil de test des périphériques de stockage
