Switch to Qt6 as default, Qt5 via USE_QT5 flag

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake ..
+        cmake -DUSE_QT5=ON ..
         cmake --build . --parallel 2
