Repair Qt dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,15 +17,13 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 option(USE_QT5 "Use Qt5 instead of Qt6" OFF)
 
 if(USE_QT5)
-    find_package(Qt5 COMPONENTS Widgets LinguistTools DBus REQUIRED)
-    find_package(PolkitQt5-1 REQUIRED)
-    set(QT_LIBS Qt5::Widgets Qt5::DBus)
-    set(POLKIT_LIB PolkitQt5-1::Core)
+    find_package(Qt5 COMPONENTS Widgets LinguistTools Network REQUIRED)
+    set(QT_LIBS Qt6::Widgets)
+    set(QT_NETWORK_LIB Qt6::Network)
 else()
-    find_package(Qt6 COMPONENTS Widgets LinguistTools DBus REQUIRED)
-    find_package(PolkitQt6-1 REQUIRED)
-    set(QT_LIBS Qt6::Widgets Qt6::DBus)
-    set(POLKIT_LIB PolkitQt6-1::Core)
+    find_package(Qt6 COMPONENTS Widgets LinguistTools Network REQUIRED)
+    set(QT_LIBS Qt5::Widgets)
+    set(QT_NETWORK_LIB Qt5::Network)
 endif()
 
 set(CMAKE_AUTOUIC ON)
